feat(backend): Migrate to Prisma for database management
Replaces Mongoose with Prisma ORM for database interactions.
Introduces Prisma schema and client for managing users and tasks.
Updates authentication and task routes to use Prisma queries.
Removes Mongoose dependencies and connection logic.
Adds Prisma CLI and client to dev dependencies.
Updates .gitignore to include Prisma migrations.

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 # Environment Variables
 .env
 /backend/.env
+/backend/prisma/.env
 
 # Logs
 logs
@@ -16,3 +17,6 @@ yarn-error.log*
 # Build output
 dist
 build
+
+# Prisma
+/backend/prisma/migrations
