--- a/backend/package.json
+++ b/backend/package.json
@@ -1,10 +1,12 @@
+
 {
   "name": "mission-planner-backend",
   "version": "1.0.0",
   "description": "Backend for the Cyberpunk Mission Planner application.",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "postinstall": "prisma generate"
   },
   "author": "",
   "license": "ISC",
