--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,13 @@
 /node_modules
 /backend/node_modules
 
-# Environment Variables
+# Environment Variables - IMPORTANT
 .env
 /backend/.env
 /backend/prisma/.env
+
+# Prisma
+/backend/prisma/client
 
 # Logs
 logs
@@ -17,3 +20,6 @@ yarn-error.log*
 # Build output
 dist
 build
+
+# Other
+.DS_Store
