--- a/backend/package.json
+++ b/backend/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "mission-planner-backend",
   "version": "1.0.0",
@@ -6,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate && prisma db push --accept-data-loss"
   },
   "author": "",
   "license": "ISC",
