feat: Configure Vercel for Node.js deployment
Adds Vercel build configuration to deploy the Node.js backend. This allows the application to be hosted on Vercel by specifying the entry point for the serverless function.

--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,6 +1,12 @@
 
 {
   "version": 2,
+  "builds": [
+    {
+      "src": "backend/server.js",
+      "use": "@vercel/node"
+    }
+  ],
   "routes": [
     {
       "src": "/api/(.*)",
